test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_return_type_fun_def.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[4]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: exit
        List[1]: 
          TIdentifier: status
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Int: 
          Void: 
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: return_struct_def
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CExpression: 
                CFunctionCall: 
                  TIdentifier: exit
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Structure: 
            TIdentifier: s
            Bool: 0
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
